k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-container
          image: ghcr.io/amitai-debiche/the-styx.net:sha-f600710
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
              requests:
                memory: "32Mi"
                cpu: "50m"
              limits:
                memory: "128Mi"
                cpu: "500m"
